feat: Register user

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 					</p>
 					<div class="login-grid-img">
 						<div class="img1">
-							<img src="../../src/imgs/Rectangle 2.png" alt="Rectangle" />
+							<img src="../../src/imgs/Rectangle 2.svg" alt="Rectangle" />
 						</div>
 						<div class="img2">
-							<img src="../../src/imgs/Rectangle 3.png" alt="Rectangle" />
+							<img src="../../src/imgs/Rectangle 3.svg" alt="Rectangle" />
 						</div>
 						<div class="img3">
-							<img src="../../src/imgs/Rectangle 4.png" alt="Rectangle" />
+							<img src="../../src/imgs/Rectangle 4.svg" alt="Rectangle" />
 						</div>
 						<div class="img4">
-							<img src="../../src/imgs/Rectangle 5.png" alt="Rectangle" />
+							<img src="../../src/imgs/Rectangle 5.svg" alt="Rectangle" />
 						</div>
 					</div>
 				</div>
@@ -66,7 +66,9 @@
 						<button type="subtmit" class="btn-primary">Acessar</button>
 						<h5>Ainda não possui conta?</h5>
 						<p>Clicando no botão abaixo, você pode se cadastrar rapidamente</p>
-						<button class="btn-gray">Cadastro</button>
+						<a class="a-gray" href="./pages/register/register.html">
+							Cadastro
+						</a>
 					</div>
 				</form>
 			</div>
