--- a/pages/feed/feed.html
+++ b/pages/feed/feed.html
@@ -9,29 +9,18 @@
 		<link rel="stylesheet" href="../../styles/index.css" />
 		<link rel="stylesheet" href="./feed-body.css" />
 		<link rel="stylesheet" href="./feed-nav.css" />
+		<link rel="stylesheet" href="../../styles/modal.css" />
 		<title>Feed</title>
 	</head>
 	<body>
 		<header>
-			<nav class="navbar">
-				<div>
-					<h1 class="logo">PetInfo</h1>
-				</div>
-				<div class="hamburger open"></div>
-				<div>
-					<div class="links hidden">
-						<button>Criar Publicação</button>
-						<div class="avatar">
-							<img src="../../src/imgs/check.png" alt="avatar" />
-						</div>
-					</div>
-				</div>
-			</nav>
+			<nav class="navbar"></nav>
 		</header>
 		<main>
 			<div class="feed-title">Feed</div>
 			<ul id="posts"></ul>
 		</main>
+
 		<script type="module" src="../../scripts/posts.js"></script>
 	</body>
 </html>
