feat: delete and create post

--- a/pages/feed/feed.html
+++ b/pages/feed/feed.html
@@ -10,17 +10,17 @@
 		<link rel="stylesheet" href="./feed-body.css" />
 		<link rel="stylesheet" href="./feed-nav.css" />
 		<link rel="stylesheet" href="../../styles/modal.css" />
+		<link rel="stylesheet" href="../../styles/toast.css" />
 		<title>Feed</title>
 	</head>
 	<body>
-		<header>
+		<header class="container">
 			<nav class="navbar"></nav>
 		</header>
-		<main>
-			<div class="feed-title">Feed</div>
+		<div class="feed-title">Feed</div>
+		<main class="container">
 			<ul id="posts"></ul>
 		</main>
-
 		<script type="module" src="../../scripts/posts.js"></script>
 	</body>
 </html>
