--- a/index.html
+++ b/index.html
@@ -15,62 +15,67 @@
 	</head>
 	<body>
 		<main class="container">
-			<div class="login-header">
-				<h1>PetInfo</h1>
-				<h2>
-					<span class="high-light">Amor</span> e
-					<span class="high-light">Carinho</span> em um só lugar
-				</h2>
+			<div class="login-container">
+				<div class="login-header">
+					<h1>PetInfo</h1>
+					<h2>
+						<span class="high-light">Amor</span> e
+						<span class="high-light">Carinho</span> em um só lugar
+					</h2>
 
-				<div class="login-info">
-					<p>
-						Todas as informações para melhorar a vida do seu pet em um só lugar
-					</p>
-					<div class="login-grid-img">
-						<div class="img1">
-							<img src="../../src/imgs/Rectangle 2.svg" alt="Rectangle" />
-						</div>
-						<div class="img2">
-							<img src="../../src/imgs/Rectangle 3.svg" alt="Rectangle" />
-						</div>
-						<div class="img3">
-							<img src="../../src/imgs/Rectangle 4.svg" alt="Rectangle" />
-						</div>
-						<div class="img4">
-							<img src="../../src/imgs/Rectangle 5.svg" alt="Rectangle" />
+					<div class="login-info">
+						<p>
+							Todas as informações para melhorar a vida do seu pet em um só
+							lugar
+						</p>
+						<div class="login-grid-img">
+							<div class="img1">
+								<img src="../../src/imgs/Rectangle 2.svg" alt="Rectangle" />
+							</div>
+							<div class="img2">
+								<img src="../../src/imgs/Rectangle 3.svg" alt="Rectangle" />
+							</div>
+							<div class="img3">
+								<img src="../../src/imgs/Rectangle 4.svg" alt="Rectangle" />
+							</div>
+							<div class="img4">
+								<img src="../../src/imgs/Rectangle 5.svg" alt="Rectangle" />
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="login-body">
-				<form action="#">
-					<div class="form-head">
-						<h2>Login</h2>
-					</div>
-					<div class="form-body">
-						<div class="input-label">
-							<label for="email-login">Email</label>
-							<input type="email" id="email-login" placeholder="E-mail" />
+				<div class="login-body">
+					<form action="#">
+						<div class="form-head">
+							<h2>Login</h2>
 						</div>
-						<div class="input-label">
-							<label for="pass-login">Senha</label>
-							<input
-								type="password"
-								id="pass-login"
-								placeholder="Digite sua senha"
-							/>
+						<div class="form-body">
+							<div class="input-label">
+								<label for="email-login">Email</label>
+								<input type="email" id="email-login" placeholder="E-mail" />
+							</div>
+							<div class="input-label">
+								<label for="pass-login">Senha</label>
+								<input
+									type="password"
+									id="pass-login"
+									placeholder="Digite sua senha"
+								/>
+							</div>
 						</div>
-					</div>
-					<p class="validation hidden">validação</p>
-					<div class="form-footer">
-						<button type="subtmit" class="btn-primary">Acessar</button>
-						<h5>Ainda não possui conta?</h5>
-						<p>Clicando no botão abaixo, você pode se cadastrar rapidamente</p>
-						<a class="a-gray" href="./pages/register/register.html">
-							Cadastro
-						</a>
-					</div>
-				</form>
+						<p class="validation hidden">validação</p>
+						<div class="form-footer">
+							<button type="subtmit" class="btn-primary">Acessar</button>
+							<h5>Ainda não possui conta?</h5>
+							<p>
+								Clicando no botão abaixo, você pode se cadastrar rapidamente
+							</p>
+							<a class="a-gray" href="./pages/register/register.html">
+								Cadastro
+							</a>
+						</div>
+					</form>
+				</div>
 			</div>
 		</main>
 
