--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -96,7 +96,27 @@
 						</div>
 
 						<div class="form-footer">
-							<button type="submit" class="btn-primary">Cadastro</button>
+							<button type="submit" class="btn-primary btn-submit disable">
+								<div class="content">Cadastro</div>
+								<span class="hidden loading"
+									><svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="16"
+										height="16"
+										fill="currentColor"
+										class="bi bi-arrow-clockwise"
+										viewBox="0 0 16 16"
+									>
+										<path
+											fill-rule="evenodd"
+											d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"
+										/>
+										<path
+											d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"
+										/>
+									</svg>
+								</span>
+							</button>
 							<a href="../../index.html" class="a-gray">Volta para o login</a>
 						</div>
 					</form>
