--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 						</p>
 						<div class="login-grid-img">
 							<div class="img1">
-								<img src="../../src/imgs/Rectangle 2.svg" alt="Rectangle" />
+								<img src="./src/imgs/Rectangle 2.svg" alt="Rectangle" />
 							</div>
 							<div class="img2">
-								<img src="../../src/imgs/Rectangle 3.svg" alt="Rectangle" />
+								<img src="./src/imgs/Rectangle 3.svg" alt="Rectangle" />
 							</div>
 							<div class="img3">
-								<img src="../../src/imgs/Rectangle 4.svg" alt="Rectangle" />
+								<img src="./src/imgs/Rectangle 4.svg" alt="Rectangle" />
 							</div>
 							<div class="img4">
-								<img src="../../src/imgs/Rectangle 5.svg" alt="Rectangle" />
+								<img src="./src/imgs/Rectangle 5.svg" alt="Rectangle" />
 							</div>
 						</div>
 					</div>
